--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -258,7 +258,13 @@
   </action>
   <action name="actionTest">
    <property name="text">
-    <string>Test</string>
+    <string>Test (F1)</string>
+   </property>
+   <property name="statusTip">
+    <string/>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
    </property>
   </action>
   <action name="actionOptions">
