--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -231,7 +231,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Mercados</string>
@@ -303,7 +303,7 @@
   </connection>
   <connection>
    <sender>actionMarkets</sender>
-   <signal>toggled(bool)</signal>
+   <signal>triggered(bool)</signal>
    <receiver>dockMarkets</receiver>
    <slot>setVisible(bool)</slot>
    <hints>
