add view option for statusbar

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -63,6 +63,7 @@
     <addaction name="actionDebug"/>
     <addaction name="separator"/>
     <addaction name="actionFullscreen"/>
+    <addaction name="actionStatusbar"/>
    </widget>
    <widget class="QMenu" name="menuFile">
     <property name="title">
@@ -272,6 +273,17 @@
     <string>Opciones...</string>
    </property>
   </action>
+  <action name="actionStatusbar">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Barra de estado</string>
+   </property>
+   <property name="shortcut">
+    <string>F10</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -303,7 +315,7 @@
   </connection>
   <connection>
    <sender>actionMarkets</sender>
-   <signal>triggered(bool)</signal>
+   <signal>toggled(bool)</signal>
    <receiver>dockMarkets</receiver>
    <slot>setVisible(bool)</slot>
    <hints>
@@ -362,6 +374,22 @@
     <hint type="destinationlabel">
      <x>-1</x>
      <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionStatusbar</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>statusbar</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>399</x>
+     <y>588</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>588</y>
     </hint>
    </hints>
   </connection>
