--- a/src/dialogaddmarket.ui
+++ b/src/dialogaddmarket.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>dialogAddMarket</class>
  <widget class="QDialog" name="dialogAddMarket">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
